@@ -402,6 +402,13 @@ it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.Dele
 it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.DeletePropertyValueRDFTransformerFactory.name = Delete property value RDF transformer
 it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.DeletePropertyValueRDFTransformerFactory.description = An RDF transformer that can be configured to delete a property value
 
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.shortName = Scheme Exporter transformer
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.scheme.description = The scheme to export
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.scheme.displayName = Scheme
+
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerFactory.name = Scheme Exporter Transformer
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerFactory.description = A transformer that can be configured to export a given scheme 
+
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.shortName = Graph store HTTP deployer configuration
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.htmlWarning = Either "<em>graphStoreHTTPEndpoint</em>" or "<em>destinationGraph</em>" shall be set. The credentials are stored without encryption on the server. Be aware that the system administration could be able to see them.
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.graphStoreHTTPEndpoint.description = The address of the endpoint conforming to the HTTP Graph Store protocol. If not provided, it is assumed that the destination graph is identified directly
