@@ -381,6 +381,13 @@ it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.Dele
 it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.DeletePropertyValueRDFTransformerFactory.name = RDF transformer per la cancellazione di valori di proprietà
 it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.deleteproperty.DeletePropertyValueRDFTransformerFactory.description = Un RDF transformer che può essere configurato per cancellare i valori di una proprietà
 
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.shortName = Scheme Exporter transformer
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.scheme.description = Lo schema da esportare
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerConfiguration.scheme.displayName = Schema
+
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerFactory.name = transformer per l'export di un dato schema
+it.uniroma2.art.semanticturkey.extension.impl.rdftransformer.schemeexporter.SchemeExporterTransformerFactory.description = Un transformer che può essere configurato per fare l'export di un dato schema 
+
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.shortName = Configurazione del deployer per l''API HTTP del graph store
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.htmlWarning = Deve essere definito "<em>graphStoreHTTPEndpoint</em>" oppure "<em>destinationGraph</em>". Le credenziali sono salvate sul server senza cifratura. Sii consapevole che l''amministratore di sistema potrebbe vederle
 it.uniroma2.art.semanticturkey.extension.impl.deployer.sparql.GraphStoreHTTPDeployerConfiguration.graphStoreHTTPEndpoint.description =  L''indirizzo dell''endpoint conforme al protocollo HTTP del graph store. Se non fornito, si assume che il grafo di destinazione sia identificato direttamente
